--- a/assets/css/style.bundle.css
+++ b/assets/css/style.bundle.css
@@ -54255,11 +54255,11 @@ body {
     .container-sm,
     .container-xl,
     .container-xxl {
-        padding: 0 50px !important
+        padding: 0 20px !important
     }
 
     .wrapper {
-        padding-top: 50px;
+        padding-top: 20px;
         padding-left: 350px
     }
 
@@ -54505,12 +54505,12 @@ body {
 @media (min-width:992px) {
     .aside {
         position: fixed;
-        top: 50px;
-        bottom: 50px;
-        left: 50px;
+        top: 20px;
+        bottom: 20px;
+        left: 20px;
         z-index: 100;
         overflow: hidden;
-        width: 300px;
+        width: 320px;
         border-radius: 2rem
     }
 
@@ -54683,7 +54683,8 @@ body {
 
 @media (min-width:992px) {
     .content {
-        padding: 25px 0 0 0
+        /* padding: 25px 0 0 0 */
+        padding: 0px;
     }
 }
 
